# async-xml

./: Cargo.toml  LICENSE-Apache-2.0  LICENSE-MIT  README.md
async-xml/: Cargo.toml
async-xml-derive/: Cargo.toml
async-xml-derive/src/: attr.rs  ctx.rs  field.rs  from_xml.rs  lib.rs  path.rs  symbol.rs  xml_struct.rs
async-xml/examples/: empty.rs  flatten.rs  newtype.rs  newtype_custom.rs  newtype_int.rs  parse_int.rs  report_option.rs  report_vec.rs  xml_vec.rs  xml_vec_derive.rs
async-xml/src/: error.rs  lib.rs  reader.rs  test.rs  util.rs
async-xml/src/reader/: impls.rs
async-xml/src/test/: derive.rs  report.rs
async-xml/src/test/derive/: discard.rs  flatten.rs  newtype.rs  newtype_custom.rs  newtype_int.rs  report_option.rs  report_vec.rs  store_any.rs  xml_vec.rs  xml_vec_derive.rs  zst.rs
async-xml/tests/: discard.rs  flatten.rs  flatten_option.rs  from.rs  newtype.rs  newtype_custom.rs  newtype_int.rs  private.rs  report_option.rs  report_vec.rs  store_any.rs  untyped_child.rs  xml_vec.rs  xml_vec_derive.rs  zst.rs
