[package]
name = "async-xml-derive"
version = "0.2.3"
edition = "2021"
authors = ["Sophie Tauchert <sophie@999eagle.moe>"]
license = "MIT OR Apache-2.0"
description = "Derive macros for async-xml"
homepage = "https://github.com/relaxdays/async-xml"
repository = "https://github.com/relaxdays/async-xml"
keywords = ["async", "deserialization"]
categories = ["asynchronous", "encoding"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
